--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.2",
+    "inngest": "^3.44.1",
+    "mongoose": "^8.19.0",
     "next": "^15.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
